--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ mnamburu@ucsc.edu -->
 
         const loader = new THREE.CubeTextureLoader();
         const texture = loader.load([
-          'sky.jpg',
-          'sky.jpg',
-          'sky.jpg',
-          'sky.jpg',
-          'sky.jpg',
-          'sky.jpg',
+          'sky2.jpg',
+          'sky2.jpg',
+          'sky2.jpg',
+          'sky2.jpg',
+          'sky2.jpg',
+          'sky2.jpg',
         ]);
         scene.background = texture;
 
